<resources>
    <string name="text_courier_company">快递公司</string>
    <string name="text_courier_number">快递单号</string>
    <string name="app_name">智能管家</string>
    <string name="guanjia">语音陪聊</string>
    <string name="weixin">新闻头条</string>
    <string name="geren">个人中心</string>
    <string name="meinv">美女相册</string>
    <string name="et_username">用户名</string>
    <string name="text_setting">设置</string>
    <string name="main_page">主页</string>
    <string name="login">登录</string>
    <string name="text_user_name">用户名</string>
    <string name="text_age">年龄:</string>
    <string name="text_desc">简介:</string>
    <string name="text_password">密码</string>
    <string name="text_register_remind">注册成功需要前往邮箱验证，否则无法登录！</string>
    <string name="text_email">邮箱</string>
    <string name="text_password_again">再次输入密码:</string>
    <string name="text_keep_password">记住密码</string>
    <string name="register">注册</string>
    <string name="text_boy">男</string>
    <string name="text_girl">女</string>
    <string name="forget_password_label">忘记密码</string>
    <string name="text_forget_password">忘记密码</string>
    <string name="text_editor_password">确定修改</string>
    <string name="text_now_password">旧密码：</string>
    <string name="text_new_password">新密码：</string>
    <string name="is_logining">正在登陆</string>
    <string name="edit_file">编辑资料</string>
    <string name="name">姓名:</string>
    <string name="sex">性别:</string>
    <string name="confirm_update">确定修改</string>
    <string name="courier">快递</string>
    <string name="number">归属地查询</string>
    <string name="input_number">请输入号码</string>
    <string name="query">查询</string>
    <string name="want_eat_click">想要吃什么搜这里</string>
    <string name="search_eat">搜索</string>
    <string name="make_veagetable">做菜</string>
    <string name="news">新闻</string>
    <string name="appname">智能助手</string>
    <string name="text_setting_title_1">管家语音聊天开关</string>
    <string name="text_setting_title_2">智能短信提醒</string>
    <string name="text_setting_title_3">检测版本</string>
    <string name="text_setting_title_4">扫一扫</string>
    <string name="text_setting_title_5">二维码分享</string>
    <string name="text_setting_title_6">我的位置</string>
    <string name="text_setting_title_7">关于软件</string>
    <string name="text_setting_content_1">开启之后与服务管家对讲语音播报</string>
    <string name="text_setting_content_2">开启之后收到短信将弹框提示</string>
    <string name="text_setting_content_3">检查是否有新版本提示下载</string>
    <string name="text_setting_content_4">扫描二维码或者条形码</string>
    <string name="text_setting_content_5">把自己分享给朋友吧</string>
    <string name="text_setting_content_6">时刻掌握自身位置</string>
    <string name="text_setting_content_7">一个菜鸟的APP</string>
    <string name="text_Ddwnload_successful">下载成功</string>
    <string name="text_dwnload_failure">下载失败</string>
    <string name="openDrawerContentDescRes">openDrawerContentDescRes</string>
    <string name="closeDrawerContentDescRes">closeDrawerContentDescRes</string>
</resources>
