<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <EditText
        android:id="@+id/ph_et_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_user_name" />

    <EditText
        android:id="@+id/ph_et_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_age" />

    <EditText
        android:id="@+id/ph_et_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_desc"
        android:lines="2" />

    <RadioGroup
        android:id="@+id/mRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/ph_rb_boy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/text_boy" />

        <RadioButton
            android:id="@+id/ph_rb_girl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/text_girl" />

    </RadioGroup>


    <EditText
        android:id="@+id/ph_et_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_password"
        android:password="true" />

    <EditText
        android:id="@+id/ph_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_password_again"
        android:password="true" />

    <EditText
        android:id="@+id/ph_et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="请输入电话号码" />

    <EditText
        android:id="@+id/ph_et_phoneinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="请输入验证码" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_register_remind"
        android:textColor="@color/colorAccent"
        android:textSize="15sp" />


    <Button
        android:id="@+id/ph_register_btnRegistered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/register"
        android:textColor="@android:color/white" />

</LinearLayout>
